changed some css styles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="about.html">About</a>
                 </li>
                 <li>
-                     <a href="contact.html">Contact</a><i class="fa-solid fa-user" style="padding: 10px;"></i>
+                    <a href="contact.html">Contact</a><i class="fa-solid fa-user" style="padding: 10px;"></i>
                 </li>
             </ul>
         </div>
@@ -119,14 +119,15 @@
             <div class="title">Selected Clients</div>
 
             <div class="images">
-                <img src="images/c1.png" alt="portraits">
-                <img src="images/c2.png" alt="portraits">
-                <img src="images/c3.png" alt="portraits">
-                <img src="images/c4.png" alt="portraits">
-                <img src="images/c5.png" alt="portraits">
-                <img src="images/c6.png" alt="portraits">
-                <img src="images/c7.png" alt="portraits">
-                <img src="images/c8.png" alt="portraits">
+                <div class="image"><img src="images/c1.png" alt="portraits"></div>
+                <div class="image"><img src="images/c2.png" alt="portraits"></div>
+                <div class="image"><img src="images/c3.png" alt="portraits"></div>
+                <div class="image"><img src="images/c4.png" alt="portraits"></div>
+                <div class="image"><img src="images/c5.png" alt="portraits"></div>
+                <div class="image"><img src="images/c7.png" alt="portraits"></div>
+                <div class="image"><img src="images/c6.png" alt="portraits"></div>
+                <div class="image"><img src="images/c8.png" alt="portraits">
+                </div>
 
             </div>
 
@@ -138,17 +139,20 @@
         <section class="info_footer">
             <div>
                 <h4 class="title">Contact info</h4>
-                 <a href="contact.html"><p>Find a location nearest
-                    you. See Our Stockists</p></a>
+                <a href="contact.html">
+                    <p>Find a location nearest
+                        you. See Our Stockists</p>
+                </a>
 
-                    <p>+374 (55) 743 874</p>
-                    <p>adamkann967@gmail.com</p>
+                <p>+374 (55) 743 874</p>
+                <p>adamkann967@gmail.com</p>
             </div>
             <div>
                 <h4 class="title">Subscribe</h4>
                 <p>Enter your email below to be the first to know about ,<br><br>
-                     new promotions and photoshoots discounts.</p>
-              <input type="email" placeholder="Please write your email" id="email"></i>
+                    new promotions and photoshoots discounts.</p>
+                <label><input type="email" placeholder="Please write your email" id="email"><i
+                        class="fa-solid fa-check"></i> </label>
             </div>
         </section>
 
