--- a/portrait.html
+++ b/portrait.html
@@ -110,7 +110,7 @@
                 <h4 class="title">Subscribe</h4>
                 <p>Enter your email below to be the first to know about ,<br><br>
                      new promotions and photoshoots discounts.</p>
-                     <input type="email" placeholder="Please write your email" id="email"></i>
+             <label><input type="email" placeholder="Please write your email" id="email"><i class="fa-solid fa-check"></i> </label>
 
             </div>
         </section>
