Added media.css file  for make  full responsive web-pag

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title> Adam Kann</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css"/>
 
 </head>
@@ -26,8 +27,7 @@
                     <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a><i class="fa-solid fa-user" style="padding: 10px;"></i>
-                </li>
+                    <a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </header>
@@ -43,7 +43,7 @@
         </nav>
         <section class ="about">
 
-            <div class="offer">
+            <div class="offer white_part">
                 <div class="bgc_y" style= "width:90%;height: 1000px;"></div>
                 <div class="container">
                     <div class="offer__text">
