--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title> Adam Kann</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css" />
 
 </head>
@@ -27,7 +28,7 @@
                     <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a><i class="fa-solid fa-user" style="padding: 10px;"></i>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
